@@ -7,6 +7,8 @@ NEW FEATURES
 ratio between the maximal and minimal (non null) tested doses, with the add
 of two arguments to bmdcalc, minBMD and ratio2switchinlog.
 - Add of two columns in the output of bmdcalc (BMR.zSD and BMR.xfold)
+- Add of a function plotfit2pdf() to plot all fits (or residual plots)
+in a pdf file, using the raw scale or the log scale of the dose
 
 Version 2.1-0 
 =============
